# anonofficals.github.io

./: CLEANUP_SUMMARY.md  DONATE_PAGE_SETUP.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  README.md  SUPPORT_MODAL_IMPLEMENTATION.md  TODO.md  docker-compose.yml  ecosystem.config.js  googlefbbaa4e10de7c8ca (2).html  index.html  jest.config.cjs  package-lock.json  package.json  vite.config.ts
coverage/: clover.xml
coverage/lcov-report/: index.html
docs/: API_COMPLETE.md  API_ENDPOINTS.md  COMPLETE_DEPLOYMENT.md  CONTENT_MANAGEMENT_API.md  CONTROLLERS.md  DASHBOARD_INTEGRATION.md  DEPLOYMENT.md  FRONTEND_BACKEND_INTEGRATION.md  FRONTEND_INTEGRATION.md  MIDDLEWARE.md  MODELS.md  PERMISSIONS.md  PRICING_API.md  ROUTES.md
projects/global-country-data/: .gitignore  CONTRIBUTING.md  README.md  index.d.ts  package.json
projects/powertoys/: .gitignore  CONTRIBUTING.md  PowerToys.sln  README.md
projects/semantic-kernel/: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SemanticKernel.sln
projects/zmap/: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
projects/zmap/src/: state.h  zmap.c
scripts/: backup-db.sh  restore-db.sh
server/: index.ts
server/config/: logger.ts  multer.ts  swagger.ts
server/controllers/: auditController.ts  authController.ts  contentController.ts  departmentController.ts  fileController.ts  internController.ts  invitationController.ts  leaveController.ts  notificationController.ts  pageController.ts  paymentController.ts  permissionController.ts  pricingController.ts  (+3 more)
src/: App.tsx  index.css  main.tsx
(+147 files in other folders)
